Fix for settings dialog icon issue and grid overlay z-index issue

--- a/styles/css/wm-widgets.less
+++ b/styles/css/wm-widgets.less
@@ -1104,7 +1104,7 @@ If the height and width are not specified the video takes the height of the post
     height:100%;
     position:absolute;
     top: 0;
-    z-index: 1000;
+    z-index: 999;
     background: rgba(255, 255, 255, 0.5);
     text-align: center;
     .loading {
